styles.css
/* ... */
.sticky-header a:hover {
    color: #fff; /* Change color on hover */
    background-color: var(--mainBlue);
}
/*#endregion*/
/*#region BOTTOMBUTTONS*/


.bottombuttons {
  --height: 80px;
  position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    z-index: 15;
}
.bottombuttons nav {
    display: flex;
    justify-content: center;
    align-items: center;
    height: var(--height);
    width: 100%;
}
.bottombuttons ul {
    list-style: none; 
    margin: 0;
    padding: 0;
    display: flex; 
    width: 100%;
    height: var(--height);
}
.bottombuttons li {
    flex: 1 0 10%;
    text-align: center;
    height: var(--height);
    justify-content: center;
    position: relative;
    color: transparent;

}
.bottombuttons a {
    text-decoration: none;
    color: #fff;
    display: flex;
    padding: 10px 0;
    height: var(--height);
    align-items: center;
    justify-content: center;
    font-size: medium;
    font-weight: bold;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;


}

.bottombuttons a:hover  {
  color: transparent;
}
.icon{
  color: transparent;
  position: absolute;
  top: 50%; /* Center vertically */
  left: 50%; /* Center horizontally */
  transform: translate(-50%, -50%);
  font-size: 30px;
  z-index: 2;
  pointer-events: none;
  opacity: 0;
}

.arrow{
  position: relative;
  top: -125px;
  left: 50%;
  transform: translateX(-90%);
  width: 25px;
  height: 1px;
  font-size: 80px;
  pointer-events: none;
  color: inherit;
}


.arrow:nth-child(1){
  color: rgb(250, 250, 250);
  font-size: 800%;
  top: 75px;
  transform: rotate(180deg);
}

.btn:hover .icon {
  opacity: 1;
  color: white; 
}

.btn {
  opacity: 0;
  transition: opacity 1s ease;
}

.btn.slide {
  opacity: 1;
}

.btn:hover {
  background-color: var(--mainBlue);
}

.bottombuttons li:nth-child(1) {
  background-color: var(--mainBlue08);
}

.bottombuttons li:nth-child(2) {
  background-color: var(--Blue108);
}

.bottombuttons li:nth-child(3) {
  background-color: var(--Blue208);
}

.bottombuttons li:nth-child(4) {
  background-color: var(--Blue308);
}

.bottombuttons li:nth-child(5) {
  background-color: var(--Blue408);
}

.bottombuttons li:hover:nth-child(1) {
  background-color: var(--mainBlue);
  color: var(--mainBlue);
}

.bottombuttons li:hover:nth-child(2) {
  background-color: var(--Blue1);
  color: var(--Blue1);
}

.bottombuttons li:hover:nth-child(3) {
  background-color: var(--Blue2);
  color: var(--Blue2);
}

.bottombuttons li:hover:nth-child(4) {
  background-color: var(--Blue3);
  color: var(--Blue3);
}

.bottombuttons li:hover:nth-child(5) {
  background-color: var(--Blue4);
  color: var(--Blue4);
}

/*#endregion*/
/*#region BACKGROUND*/
.bgimg {
  width: 100%;
  height: 100%;
  min-height: 800px;

  object-fit: cover;
  opacity: 1;
  transition: 1s ease-in-out;
  display: block;
  z-index: -1;
}
.bgimg.fade-out {
  opacity: 0; 
}
.bluegradient{
  background: linear-gradient(to right, var(--mainBlue08) 0%, rgba(0, 0, 0,0) 50%);;
  height: 100%;
  width: 100%;
  position: absolute;
}

.bgvideo_container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    min-height: 800px;

    z-index: -1; 
}
.bgvideo {
    width: 100%;
    height: 100%;
    object-fit: cover;
    overflow-y: scroll;

}
.bgimg_container{
    position:absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    pointer-events: none;
}
.multistatebox{
    position:absolute;
    top: 0;
    left: 0;
    height: 100%;
    min-height: 800px;

    width: 100%;
}
.imgstates {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
    opacity: 0;
    transition: opacity 0s ease;
    filter: brightness(130%) blur(4px);
    transition: filter 1s ease;
    display: block;
}



/*#endregion*/
/*#region HEADER*/
.header{
    position: absolute;
    height: 140px;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 10;
    background-color: rgba(255,255,255,0.8);
}
.inner_header{
    width: 100%;
    height: 50px;
    padding: 0 30px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
}
#textheader{
    margin: 0;
    color: gray;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-weight: 100;
    font-size: 14px;
    text-decoration: none;
}
.icons{
    display: flex;
    gap: 30px; 
    
}
.icons a{
    color: var(--mainBlue);
}

.svg-container {
width: 300px;
height: auto;
position: absolute;
left: 49.4%;
top: 50px;
transform: translateX(-50%);
display: flex;
justify-content: center;
align-items: center;
overflow: visible;
}
#svg1{
    position: fixed;
    top: 12px;
    width: 250px; /*scale from here*/
    height: auto;
}

#Home{
  font-weight: bolder;
  font-size: 17px;
}
/*#endregion*/

/*#region LANDING PAGE CONTENT*/
.landing_content{
  top: 34%;
  left: 11%;
  position: absolute;
  z-index: 8;
  row-gap: 20px;
  display: flex;
  flex-direction: column;
  opacity: 1;
  flex-basis: 0
}


h1{
  color: white;
  font-size: 40px;
  letter-spacing: .1rem;
  line-height: 3rem;
  font-family: 'Empira';
  text-align: left;
  transition: left 1s ease;
}

.landing_content h1{
  width: 100%;
  padding-right: 4%;
}

p1{
  color: white;
  font-size: 17px;
  font-family:  'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-weight: 500;
  text-align: left;
  letter-spacing: -1px;
  transition: left 1s ease;

}

.title_cont{
mask-image: linear-gradient(to right, rgba(255,255,255,1)99%,rgba(0,0,0,0)100%);
mask-size: 0%;
mask-repeat: no-repeat;
mask-position: 0 ;
transition: mask-position 1s ease-in-out, mask-size 1s ease-in-out;
}

.title_cont.slide{
mask-position: 100;
mask-size: 110%;
}

.title{
  position: relative;
  left: 4%;
  max-width: 1200px;
  margin-right: 4%;
}
/* ... */

